domain/model/src/main/java/org/example/model/config/error/FieldErrorCode.java
package org.example.model.config.error;

import org.example.framework.error.ErrorCode;

public interface FieldErrorCode extends ErrorCode {
    String NULL_POINTER = "NULL_POINTER";
}
